updated header image updated max widths fixed nav misalignment

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -2,6 +2,12 @@
 	height:30px;
 }
 
+.about-wrap {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1540px;
+}
+
 .about {
 	margin-left: 50px;
 	margin-right: 50px;
@@ -44,8 +50,12 @@
 	}
 	@media (max-width: $screen-sm-min) {
 		width: 100%;
-		height: 400px;
+		height: 350px;
 		border-bottom: 5px solid $color-pink-sherbert;
+	}
+	@media (max-width: $screen-sm-min) {
+		height: 280px;
+		border-bottom: 2px solid $color-pink-sherbert;
 	}
 }
 
